test_regress/t/t_force_subnet.out
%Error-UNSUPPORTED: t/t_force_subnet.v:27:10: Unsupported: Verilog 1995 force
   27 |          force sub1.subnet = 8'h00;   
      |          ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_force_subnet.v:31:10: Unsupported: Verilog 1995 force
   31 |          force subnet = 8'h10;   
      |          ^~~~~
%Error-UNSUPPORTED: t/t_force_subnet.v:35:10: Unsupported: Verilog 1995 release
   35 |          release subnet;   
      |          ^~~~~~~
%Error: Exiting due to
